Java 21 modernization: Complete Jakarta-ORO removal and framework upgrade
This commit represents a comprehensive modernization of the Comet Way Agent Kernel
from version 3.3 (2011) to 3.4 (2025) with full Java 21 LTS compatibility.

Major changes:
- Replace Jakarta-ORO with native java.util.regex throughout the codebase
- Update JDBC interfaces for Java 21 compatibility
- Fix deprecated wrapper constructor warnings
- Update build system for OpenJDK 21
- Complete removal of external dependencies
- Version bump to 3.4 Final (07-23-2025 - Java 21)

Technical improvements:
- Native regex operations provide better performance
- Reduced memory footprint by eliminating external dependencies
- Modern Java patterns while preserving original API compatibility
- Zero breaking changes to public interfaces

Files modernized:
- Core regex utilities (jGrep.java, RegExpTextFinder.java)
- HTTP extension classes for request processing
- JDBC connection implementations
- Build scripts and documentation generation
- Comprehensive new documentation (README.md, RELEASES.md, CLAUDE.md, DEMOS.md)

The framework maintains its proven agent-based architecture while being
fully compatible with modern Java development practices.

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>