@@ -854,7 +854,7 @@ public class Props
 				{
 					if ((value instanceof Boolean) == false)
 					{
-						value = new Boolean(getBoolean(key));
+						value = Boolean.valueOf(getBoolean(key));
 					}
 				}
 
@@ -864,7 +864,7 @@ public class Props
 				{
 					if ((value instanceof Integer) == false)
 					{
-						value = new Integer(getInteger(key));
+						value = Integer.valueOf(getInteger(key));
 					}
 				}
 
@@ -1514,7 +1514,7 @@ public class Props
 
 	public void setBoolean(String key, boolean value)
 	{
-		container.setProperty(key, new Boolean(value));
+		container.setProperty(key, Boolean.valueOf(value));
 		notifyPropsChanged(key);
 	}
 
@@ -1555,7 +1555,7 @@ public class Props
 
 	public void setDouble(String key, double value)
 	{
-		container.setProperty(key, new Double(value));
+		container.setProperty(key, Double.valueOf(value));
 		notifyPropsChanged(key);
 	}
 
@@ -1568,7 +1568,7 @@ public class Props
 
 	public void setFloat(String key, float value)
 	{
-		container.setProperty(key, new Float(value));
+		container.setProperty(key, Float.valueOf(value));
 		notifyPropsChanged(key);
 	}
 
@@ -1581,7 +1581,7 @@ public class Props
 
 	public void setInteger(String key, int value)
 	{
-		container.setProperty(key, new Integer(value));
+		container.setProperty(key, Integer.valueOf(value));
 		notifyPropsChanged(key);
 	}
 
@@ -1594,7 +1594,7 @@ public class Props
 
 	public void setLong(String key, long value)
 	{
-		container.setProperty(key, new Long(value));
+		container.setProperty(key, Long.valueOf(value));
 		notifyPropsChanged(key);
 	}
 
